--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@ for (let i = 0; i < 700; i++) {
 id++;
 var img = document.createElement("img");
 img.style.position = "absolute";
-img.style.top = Math.floor(Math.random() * 50000);
-img.style.left = Math.floor(Math.random() * 500);
-img.style.width = Math.floor(Math.random() * 700);
-img.style.height = Math.floor(Math.random() * 500);
+img.style.top = Math.floor(Math.random() * 50000) + "px";
+img.style.left = Math.floor(Math.random() * 500) + "px";
+img.style.width = Math.floor(Math.random() * 700) + "px";
+img.style.height = Math.floor(Math.random() * 500) + "px";
 img.style.zIndex = Math.floor(Math.random() * 5);
 if (Math.floor(Math.random() * 3) == 1) {
 img.class = "anim";
@@ -178,10 +178,10 @@ for (let i = 0; i < 50; i++) {
 id++;
 var p = document.createElement("p");
 p.style.position = "absolute";
-p.style.top = Math.floor(Math.random() * 50000);
-p.style.left = Math.floor(Math.random() * 500);
-p.style.width = Math.floor(Math.random() * 700);
-p.style.height = Math.floor(Math.random() * 500);
+p.style.top = Math.floor(Math.random() * 50000) + "px";
+p.style.left = Math.floor(Math.random() * 500) + "px";
+p.style.width = Math.floor(Math.random() * 700) + "px";
+p.style.height = Math.floor(Math.random() * 500) + "px";
 p.style.zIndex = Math.floor(Math.random() * 5 + 3);
 p.style.fontFamily = "Helvetica, 'Trebuchet MS', Verdana, sans-serif";
 if (Math.floor(Math.random() * 3) == 1) {
