--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@ background-color: black;
 font-size: 42px;
 }
 </style>
-<h2 id="mainText">WELCOME TO BOZO LAND</h2>
+<h2 id="mainText">WELCOME TO BOZO LAND<br>
+<audio controls loop autoplay>
+  <source src="http://soundfxcenter.com/music/television-theme-songs/8d82b5_American_Dad_Theme_Song.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+</h2>
 <div id="group1"></div>
 <div id="group2"></div>
 <script>
