--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ font-size: 42px;
 </style>
 <h2 id="mainText">WELCOME TO BOZO LAND<br>
 <audio controls loop autoplay>
-  <source src="http://soundfxcenter.com/music/television-theme-songs/8d82b5_American_Dad_Theme_Song.mp3" type="audio/mpeg">
+  <source src="http://soundfxcenter.com/music/television-theme-songs/8d82b5_American_Dad_Theme_Song.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
 </h2>
