--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<title>BOZO LAND - REBEL THE EVERYTHING!</title>
+<meta property="og:url" content="https://crazymemesmaker.github.io/Myrrlycoolsite/" /> 
+<meta property="og:type" content="website" /> 
+<meta property="og:title" content="BOZO LAND" /> 
+<meta property="og:description" content="WE MUST PROTECT AND BATTLE TO PROTECT OUR MOTHERLAND!!! YES!!!" /> 
+<meta property="og:image" content="https://crazymemesmaker.github.io/Myrrlycoolsite/Img/Jesus.jpeg" /> 
+<meta property="og:image:type" content="image/jpeg" /> 
+<meta property="og:image:width" content="986" /> 
+<meta property="og:image:height" content="860" />
 </head>
 <body>
 <style>
