--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>BOZO LAND - REBEL THE EVERYTHING!</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta property="og:url" content="https://crazymemesmaker.github.io/Myrrlycoolsite/" /> 
 <meta property="og:type" content="website" /> 
 <meta property="og:title" content="BOZO LAND" /> 
