--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ z-index: 10;
 background-color: black;
 font-size: 42px;
 }
+html, body {
+max-width: 100%;
+overflow-x: hidden;
+}
 </style>
 <h2 id="mainText">WELCOME TO BOZO LAND<br>
 <audio controls loop autoplay>
