--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ var files = [
 "Nietza.jpeg",
 "Nou.jpg",
 "Nowonder.jpeg",
-//"0.jpg",
+"O.jpg",
 "Oh.jpg",
 //"Ohford.jpg",
 "Pain.jpg",
@@ -144,6 +144,7 @@ var files = [
 "Wifibad.jpg",
 "Wta.png",
 "Wut.jpeg",
+"Goofy.jpeg",
 ];
 
 var txt = [
@@ -186,7 +187,7 @@ img.class = "anim";
 img.id = id;
 img.alt = id + " CHECK MY NAME IS OFFENSIVE IN MY COUNTRY STATE";
 document.body.style.backgroundImage = "url('https://crazymemesmaker.github.io/Myrrlycoolsite/Img/Jesus.jpeg')";
-img.src = "https://crazymemesmaker.github.io/Myrrlycoolsite/Img/" + files[Math.floor(Math.random() * 102)];   
+img.src = "https://crazymemesmaker.github.io/Myrrlycoolsite/Img/" + files[Math.floor(Math.random() * 103)];   
 group1.appendChild(img);
 }
 
