--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ var colors = [
 "green",
 ];
 p.style.color = colors[Math.floor(Math.random() * 6)];
-p.style.fontSize = Math.floor(Math.random() * 90);
+p.style.fontSize = Math.floor(Math.random() * 90) + "px";
 group2.appendChild(p);
 }
 
