--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@ overflow-x: hidden;
 }
 </style>
 <h2 id="mainText">WELCOME TO BOZO LAND<br>
-<audio controls loop autoplay>
-  <source src="http://soundfxcenter.com/music/television-theme-songs/8d82b5_American_Dad_Theme_Song.mp3" type="audio/mp3">
-  Your browser does not support the audio element.
-</audio>
+<audio controls autoplay loop><source src="http://soundfxcenter.com/music/television-theme-songs/8d82b5_American_Dad_Theme_Song.mp3" type="audio/mpeg"></audio>
 </h2>
 <div id="group1"></div>
 <div id="group2"></div>
