--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="icon" type="image/jpeg" href="https://crazymemesmaker.github.io/Myrrlycoolsite/Img/Jesus.jpeg" />
 <title>BOZO LAND - REBEL THE EVERYTHING!</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta property="og:url" content="https://crazymemesmaker.github.io/Myrrlycoolsite/" /> 
