--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <link rel="icon" type="image/jpeg" href="https://crazymemesmaker.github.io/Myrrlycoolsite/Img/Jesus.jpeg" />
 <title>BOZO LAND - REBEL THE EVERYTHING!</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta property="og:url" content="https://crazymemesmaker.github.io/Myrrlycoolsite/" /> 
+<meta property="og:url" content="https://nsu0.github.io/Myrrlycoolsite/" /> 
 <meta property="og:type" content="website" /> 
 <meta property="og:title" content="BOZO LAND" /> 
 <meta property="og:description" content="WE MUST PROTECT AND BATTLE TO PROTECT OUR MOTHERLAND!!! YES!!!" /> 
-<meta property="og:image" content="https://crazymemesmaker.github.io/Myrrlycoolsite/Img/Jesus.jpeg" /> 
+<meta property="og:image" content="https://nsu0.github.io/Myrrlycoolsite/Img/Jesus.jpeg" /> 
 <meta property="og:image:type" content="image/jpeg" /> 
 <meta property="og:image:width" content="986" /> 
 <meta property="og:image:height" content="860" />
@@ -184,8 +184,8 @@ img.class = "anim";
 }
 img.id = id;
 img.alt = id + " CHECK MY NAME IS OFFENSIVE IN MY COUNTRY STATE";
-document.body.style.backgroundImage = "url('https://crazymemesmaker.github.io/Myrrlycoolsite/Img/Jesus.jpeg')";
-img.src = "https://crazymemesmaker.github.io/Myrrlycoolsite/Img/" + files[Math.floor(Math.random() * 103)];   
+document.body.style.backgroundImage = "url('https://nsu0.github.io/Myrrlycoolsite/Img/Jesus.jpeg')";
+img.src = "https://nsu0.github.io/Myrrlycoolsite/Img/" + files[Math.floor(Math.random() * 103)];   
 group1.appendChild(img);
 }
 
